Expand parsing for expressions

--- a/examples/example.am
+++ b/examples/example.am
@@ -1,5 +1,5 @@
 
-testname:_int32 = 1 + 1
+testname:_int32 = 1 + 2 * 3
 
 def add(first:_int32, second:_int32):_int32
     testname2:Integer = 1 + 1
@@ -11,3 +11,4 @@ end
 
 testname2:Integer = 1 + 1
 testname2:Integer = 1 + 1
+
