--- a/examples/example.am
+++ b/examples/example.am
@@ -1,3 +1,3 @@
 
-testname1:_int32 = 1 + 4
-testname2:_int32 = 1 > 1 == testname1 + 4 > 2
+testname1:_int32 = (1 + 4)
+testname2:_int32 = 1 > (1 == testname1) + 4 > 2
