Add function definition visit methods to DotVisitor

--- a/examples/example.am
+++ b/examples/example.am
@@ -1,3 +1,7 @@
 
 testname1:_int32 = (1 + 4)
 testname2:_int32 = 1 > (1 == testname1) + 4 > 2
+
+def add(a:_int32, b:_int32):_int32
+    c:_int32 = a + b
+end
