--- a/examples/example.am
+++ b/examples/example.am
@@ -1,8 +1,6 @@
+a:_int32 = 1 > (1 == testname1) + 4 > 2
 
-testname1:_int32 = (1 + 4)
-testname2:_int32 = 1 > (1 == testname1) + 4 > 2
-
-def func(a:_int32, b:_int32):_int32
+def func(a:_int32, b:_int32):_int32  
     c:_int32 = a
     c = c + b
     return c
@@ -10,8 +8,8 @@ end
 
 class type
     @a:_int32 = testname1
-
-    def b():_int32
-        return 2 * a
+    def func():_int32
+        return c
     end
+
 end
