--- a/examples/example.am
+++ b/examples/example.am
@@ -9,7 +9,14 @@ end
 class type
     @a:_int32 = testname1
     def func():_int32
-        return c
+        return 2*c
     end
+end
 
+if a + b
+    c = a
+elsif a * b
+    c = b
+else
+    c = c
 end
