--- a/examples/example.am
+++ b/examples/example.am
@@ -6,9 +6,8 @@ class T
 end
 
 def func(c:_int32, d:_int32):_int32
-    b:_int32 = c + d * c
+    b:_int32 = c + d * c[c+d[1].c]
     e:_float32 = 1.34
-    d = e
     return b
 end
 
