--- a/examples/example.am
+++ b/examples/example.am
@@ -6,14 +6,12 @@ class T
 end
 
 def func(c:_int32, d:_int32):_int32
-    b:_int32 = c + d * c[c+d[1].c]
+    b:_int32 = c + d * c[func(1,1)]
     e:_float32 = 1.34
     return b
 end
 
-def func(a:_int32, b:_int32):T
 
-end
 
 class test
     a:_int32 = testname1
