Fix segfault on function definition with empty parameters

--- a/examples/example.am
+++ b/examples/example.am
@@ -5,8 +5,8 @@ c:_string = "" + "a"
 class T
 end
 
-def func(c:_int32, d:_int32):_int32
-    b:_int32 = c + d * c[func(1,1)]
+def func():_int32
+    b:_int32 = func()
     e:_float32 = 1.34
     return b
 end
