--- a/examples/example.am
+++ b/examples/example.am
@@ -1,5 +1,5 @@
 a:_int32 = 1 + 1
-b:_float32 = 1.2 + 1.23
+b:_float32 = [1.2] + [1.3]
 c:_string = "" + "a"
 
 class T
@@ -11,11 +11,8 @@ def func():_int32
     return b
 end
 
-
-
 class test
     a:_int32 = testname1
-
 end
 
 if a + b
