--- a/examples/example.am
+++ b/examples/example.am
@@ -1,13 +1,13 @@
 a:_int32 = 1 + 1
-b:_float32 = [1.2] + [1.3]
+b:_float32 = [1.2, 1.45] + [1.3]
 c:_string = "" + "a"
 
-class T
-end
+class bool end
 
 def func():_int32
     b:_int32 = func()
     e:_float32 = 1.34
+    a:bool = e and b or e
     return b
 end
 
