--- a/examples/example.am
+++ b/examples/example.am
@@ -2,8 +2,6 @@ a:_int32 = 1 + 1
 b:_float32 = [1.2, 1.45] + [1.3]
 c:_string = "" + "a"
 
-class bool end
-
 def func():_int32
     b:_int32 = func()
     e:_float32 = 1.34
@@ -11,8 +9,9 @@ def func():_int32
     return b
 end
 
-class test
-    a:_int32 = testname1
+class T
+    op <=(awaga:_int32):T
+    end
 end
 
 if a + b
