--- a/examples/example.am
+++ b/examples/example.am
@@ -10,9 +10,16 @@ end
 
 class T
     a:_int32 = 1
-    b:_int32 = 1
-    op <=(z:_int32):_int32
-        
+
+    def func(a:_int32):_int32
+        b:_int32 = func(a)
+    end
+
+    def func():_int32
+    end
+
+    op <=(c:_int32):_int32
+        b:_int32 = a + c
     end
 end
 
