--- a/examples/example.am
+++ b/examples/example.am
@@ -1,32 +1,26 @@
+
 a:_int32 = 1 + 1 * 1 and 1
 
-
-def func():_int32
-    b:_int32 = func()
-    e:_float32 = 1.34
-    return b
-end
-
 class T
-    a:_int32 = 1
+    a:_int32 = 1 + 1
 
-    op <=(c:_int32):_int32
-        b:_int32 = a + c
-        g:_float32 = 1.2
-        return g
+    def method(b:_int32):_int32
+        b = a
     end
 end
 
-g:T = 
+def main(a:_int32, b:_int32):_int32
+    c:_int32 = 1 + 1
 
-if a + b
-    c = a
-elsif a * b
-    c = b
-else
-    c = c
-end
+    if a + b
+        c = a
+    elsif a * b
+        c = b
+    else
+        c = c
+    end
 
-while a < 10 do
-    a = a.b(1+2, b(1+2)) + 1
+    while a < 10 do
+        a = a.b(1+2, b(1+2)) + 1
+    end
 end
