--- a/examples/example.am
+++ b/examples/example.am
@@ -1,8 +1,8 @@
 
 
-$a:int = 1
-$b:int* = $a + 1
-$c:_float32 = 1.0
+$a:int = new int()
+$b:int* = new* int()
+$c:_float32* = new[3] _float32()
 
 def ex(a:int*, b:int):int*
     $a = 1
