--- a/examples/example.am
+++ b/examples/example.am
@@ -14,10 +14,11 @@ type T
         @a+T
     end
 end
-$b:T* = new* T(1)
+$b:T = new T(1)
 
 def main():int
         a:T* = new[5] T(1)
-        b:T = new T(2)
-        c:T = a+b
+        b:T* = [new T(1), new T(2), $b]
+
+
 end
