--- a/examples/example.am
+++ b/examples/example.am
@@ -11,7 +11,7 @@ type Member
     @luckyNumbers:int*
 
     new(name:char*, age:int, luckyNumbers:int*)
-        @name = name[0]
+        @name = name
         @age = age
         @luckyNumbers = luckyNumbers
     end
