Refactor assignments to allow LHS accesses, verified with isValidLHS()

--- a/examples/example.am
+++ b/examples/example.am
@@ -1,24 +1,21 @@
 $a:int = 1
 $c:char* = "string!"
 
-def problemParams(a:int, a:int):int
-
+type Name
+    @first:char*
+    @last:char*
 end
 
 type Member
-    @name:char*
+    @name:Name
     @age:int
     @luckyNumbers:int*
 
     new(name:char*, age:int, luckyNumbers:int*)
-        @name = name
-        @age = age
-        @luckyNumbers = luckyNumbers
     end
 
     new(other:Member)
-        a:Member = new Member("?", 0, [1])
-        @name = a.name
+        @name.first[0] = $c[0]
         @age = other.age
         @luckyNumbers = other.luckyNumbers
     end
@@ -30,9 +27,7 @@ end
 
 def main():int
     example:Member* = new* Member("David", 22, [1,2,3])
-    example2:Member = example[0]
-    example[0].getNumber() + $a / 2
-    firstLetter:char = example[0].name[0]
+
 
     return 0
 end
