--- a/examples/example.am
+++ b/examples/example.am
@@ -1,43 +1,12 @@
-$a:int = 1
-$c:char* = "string!"
 
-type Name
-    @first:char*
-    @last:char*
-end
+$arr:int* = [1, 2, 3]
 
-type Member
-    @name:Name
-    @age:int
-    @luckyNumbers:int*
-
-    new(name:char*, age:int, luckyNumbers:int*)
+def func(a:int):int
+    i:int = 3
+    while i < 3 do
+        $arr[i] = $arr[i] * 2
+        i = i + 1
     end
 
-    new(other:Member)
-        @name.first[0] = $c[0]
-        @age = other.age
-        @luckyNumbers = other.luckyNumbers
-    end
-
-    def @getNumber():int
-        return 1
-    end 
-end
-
-def main(first:int):int
-    example:Member* = new* Member("David", 22, [1,2,3])
-    a:bool = true or false
-
-    while first < 1 or first > 2 do
-        example[0].name.first = "Daviid"
-        example[0].luckyNumbers[0]= $a
-        while first < 1 or first > 2 do
-            break
-        end
-        continue
-    end
-    break
     return 0
 end
-
