--- a/examples/backup.am
+++ b/examples/backup.am
@@ -12,10 +12,13 @@ type Member
     @luckyNumbers:int*
 
     new(name:char*, age:int, luckyNumbers:int*)
+        @name:Name
+        @age:int
+        @luckyNumbers:int*
     end
 
     new(other:Member)
-        @name.first[0] = $c[0]
+        @name.first = other.first
         @age = other.age
         @luckyNumbers = other.luckyNumbers
     end
@@ -31,7 +34,7 @@ def main(first:int):int
 
     while first < 1 or first > 2 do
         example[0].name.first = "Daviid"
-        example[0].luckyNumbers[0]= $a
+        example[0].luckyNumbers[0] = $a
         while first < 1 or first > 2 do
             break
         end
