--- a/examples/example.am
+++ b/examples/example.am
@@ -1,13 +1,8 @@
 
-$arr:int* = [1, 2, 3]
-$size:int = 3
 
-def main():int
-    i:int = 0
-    while i < $size do
-        $arr[i] = $arr[i] * 2
-        i = i + 1
-    end
+
+def example(first:int, second:int):int
+    c:int = 1
 
     return 0
 end
