Add code generation for calls with returns of primitives

--- a/examples/example.am
+++ b/examples/example.am
@@ -6,3 +6,9 @@ def example(first:int, second:int):int
 
     return c
 end
+
+def other(a:int, b:int):int
+    c:int = example(a * 1, a * (b * 2))
+
+    return c
+end
