--- a/examples/example.am
+++ b/examples/example.am
@@ -1,23 +1,7 @@
 
-type Type
-    @a:int
-    @b:int
-
-    new(a:int, b:int)
-        @a = a
-        @b = b
-    end
-end
-
-def allocs():int
-    n:Type = new Type(1, 2)
-    s:int** = stack [12] int*
-    h:Type* = heap [12] Type
-    return 0
-end
 
 
-def ptrFunc(first:int**):int**
+def ptrFunc(first:int*):int*
     return first
 end
 
