--- a/examples/example.am
+++ b/examples/example.am
@@ -3,20 +3,21 @@
 
 def ptrFunc(arr:int*):int
 
-    i:int = 0
-    while i != 10 do
-        
-
-        a:int* = arr
-        b:int = arr[i]
-
-
-        i = i + 1
+    i:int = 1
+    while i != 33 do
+        arr[i] = 1
+        i = i * 2
     end
 
     return 0
 end
 
-def main(): int
+def doubleSubscript(a:int**, b:int):int
+    a[0][0] = 1
+    b = a[0][0]
+    return 1
+end
+
+def main():int
     return 0
 end
