--- a/examples/example.am
+++ b/examples/example.am
@@ -1,23 +1,24 @@
 
 
 
-def ptrFunc(arr:int*):int
+def main():int
+    arr:int** = stack [3] int*
 
-    i:int = 1
-    while i != 33 do
-        arr[i] = 1
-        i = i * 2
+    i:int = 0
+    while i != 3 do
+        arr[i] = stack [3] int
+        i = i + 1
     end
 
-    return 0
-end
+    k:int = 0
+    while k != 3 do
+        j:int = 0
+        while j != 3 do
+            arr[k][j] = k + j
+            j = j + 1
+        end
+        k = k + 1
+    end
 
-def doubleSubscript(a:int**, b:int):int
-    a[0][0] = 1
-    b = a[0][0]
-    return 1
-end
-
-def main():int
-    return 0
+    return arr[2][0]
 end
