--- a/examples/example.am
+++ b/examples/example.am
@@ -1,24 +1,40 @@
 
+type T
+    @a:int
+    @b:float
+    @c:bool**
 
+    new(a:int, b:float, c:bool**)
+        @a = a
+        @b = b
+        @c = c
+    end
+
+end
+
+def foo(a:int, b:int):int
+
+    return (a + b) * a
+end
 
 def main():int
-    arr:int** = stack [3] int*
+    arr:int** = stack [5] int*
 
     i:int = 0
-    while i != 3 do
-        arr[i] = stack [3] int
+    while i != 5 do
+        arr[i] = stack [5] int
         i = i + 1
     end
 
     k:int = 0
-    while k != 3 do
+    while k != 5 do
         j:int = 0
-        while j != 3 do
-            arr[k][j] = k + j
+        while j != 5 do
+            arr[k][j] = foo(k, j)
             j = j + 1
         end
         k = k + 1
     end
 
-    return arr[2][0]
+    return arr[4][3]
 end
