--- a/examples/example.am
+++ b/examples/example.am
@@ -1,39 +1,33 @@
 
-type U
-    @c:int
-    @ptr:int*
 
-end
+type Matrix
+    @data:int**
 
-type T
-    @ptr:int*
-    @a:int
-    @b:U*
-    @d:T*
-    @c:int
-
-    new(a:int)
-        @a = a
-        @c = @a
-        
-        @b = stack [4] U
+    new(size:int)
+        @data = heap [size] int*
         i:int = 0
-        while i != 4 do
-            @b[i].c = i
+        while i != size do
+            @data[i] = heap [size] int
             i = i + 1
         end
 
-        @c = @b[2].c
         return
     end
 end
 
 def main():int
+    size:int = 4
+    a:Matrix = new Matrix(size)
 
-    a:T = new T(13)
+    i:int = 0
+    while i != size do
+        j:int = 0
+        while j != size do
+            a.data[i][j] = i + j
+            j = j + 1
+        end
+        i = i + 1 
+    end
 
-
-
-
-    return a.c + a.a
+    return a.data[1][3]
 end
