--- a/examples/example.am
+++ b/examples/example.am
@@ -15,19 +15,28 @@ type Matrix
     end
 end
 
+def getEntry(m:Matrix, i:int, j:int):int
+    return m.data[i][j]
+end
+
+def add(first:int, second:int):int
+    return first + second
+end
+
 def main():int
-    size:int = 4
-    a:Matrix = new Matrix(size)
+    
+    size:int = 12
+    mat:Matrix = new Matrix(size)
 
     i:int = 0
     while i != size do
         j:int = 0
         while j != size do
-            a.data[i][j] = i + j
+            mat.data[i][j] = add(i, j)
             j = j + 1
         end
         i = i + 1 
     end
 
-    return a.data[1][3]
+    return getEntry(mat, size+(-1), size+(-2))
 end
