--- a/examples/example.am
+++ b/examples/example.am
@@ -69,6 +69,11 @@ end
 # global type test
 $mat:Matrix
 
+# function to test global parameters
+def foo(num:int, matrix:Matrix):int
+    return matrix.size + num
+end
+
 # testing in main
 def main():int
     
@@ -79,7 +84,7 @@ def main():int
     while i != size do
         j:int = 0
         while j != size do
-            mat.data[i][j] = i + j
+            mat.data[i][j] = i + j + -1
             j = j + 1
         end 
         i = i + 1 
@@ -88,5 +93,5 @@ def main():int
     $mat = new Matrix(mat)
     $a = mat.size
 
-    return $mat.size + $a
+    return foo($a, $mat) + mat.data[size-1][size-1] - -123
 end
