--- a/examples/example.am
+++ b/examples/example.am
@@ -92,6 +92,17 @@ def main():int
 
     $mat = new Matrix(mat)
     $a = mat.size
+    placeholder:int = foo($a, $mat) + mat.data[size-1][size-1] - -123
 
-    return foo($a, $mat) + mat.data[size-1][size-1] - -123
+    k:int = 0
+    boolTest:bool = true
+    while boolTest do
+        k = k + 10
+
+        while boolTest do
+            boolTest = false
+        end
+    end
+
+    return k
 end
