--- a/examples/example.am
+++ b/examples/example.am
@@ -114,9 +114,8 @@ def main():int
         elsif k == 90 then
             return 91
         elsif k == 80 then
+            continue
             break
-            m:int = 1
-            
         end
     end
 
